istio-virtualservice-working.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: events-service-virtualservice
  namespace: eventhub
spec:
  hosts:
  - "*"
  gateways:
  - seoa-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: events-service.eventhub.svc.cluster.local
        port:
          number: 8080
