istio-virtualservices.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: events-service-virtualservice
  namespace: eventhub
spec:
  hosts:
  - "*"
  gateways:
  - seoa-gateway
  http:
  - match:
    - uri:
        prefix: /events
    route:
    - destination:
        host: events-service.eventhub.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: notifications-service-virtualservice
  namespace: eventhub
spec:
  hosts:
  - "*"
  gateways:
  - seoa-gateway
  http:
  - match:
    - uri:
        prefix: /notifications
    route:
    - destination:
        host: notifications-service.eventhub.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: users-service-virtualservice
  namespace: eventhub
spec:
  hosts:
  - "*"
  gateways:
  - seoa-gateway
  http:
  - match:
    - uri:
        prefix: /users
    route:
    - destination:
        host: users-service.eventhub.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ticketing-service-virtualservice
  namespace: eventhub
spec:
  hosts:
  - "*"
  gateways:
  - seoa-gateway
  http:
  - match:
    - uri:
        prefix: /ticketing
    route:
    - destination:
        host: ticketing-service.eventhub.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: payments-service-virtualservice
  namespace: eventhub
spec:
  hosts:
  - "*"
  gateways:
  - seoa-gateway
  http:
  - match:
    - uri:
        prefix: /payments
    route:
    - destination:
        host: payments-service.eventhub.svc.cluster.local
        port:
          number: 8080
